--- a/com.cloudbees.eclipse.run.ui/plugin.xml
+++ b/com.cloudbees.eclipse.run.ui/plugin.xml
@@ -100,7 +100,7 @@
           icon="icons/16x16/cb_plain.png"
           id="com.cloudbees.eclipse.run.ui.launchconfiguration.shortcut"
           label="CloudBees Application"
-          modes="run, debug">
+          modes="run">
        <contextualLaunch>
           <contextLabel
                 label="CloudBees Application"
