--- a/com.cloudbees.eclipse.run.ui/plugin.xml
+++ b/com.cloudbees.eclipse.run.ui/plugin.xml
@@ -133,9 +133,17 @@
        point="org.eclipse.wst.server.ui.wizardFragments">
     <fragment
           class="com.cloudbees.eclipse.run.ui.wizards.RunCloudServer"
-          id="com.cloudbees.eclipse.run.ui.runcloud"
-          typeIds="com.cloudbees.eclipse.core.runcloud.server">
+          id="com.cloudbees.eclipse.core.runcloud"
+          typeIds="com.cloudbees.eclipse.core.runcloud">
     </fragment>
+ </extension>
+ <extension
+       point="org.eclipse.wst.server.ui.serverImages">
+    <image
+          icon="icons/16x16/cb_plain.png"
+          id="com.cloudbees.eclipse.run.ui.server.image"
+          typeIds="com.cloudbees.eclipse.core.runcloud">
+    </image>
  </extension>
 
 </plugin>
