--- a/com.cloudbees.eclipse.run.ui/plugin.xml
+++ b/com.cloudbees.eclipse.run.ui/plugin.xml
@@ -136,6 +136,11 @@
           id="com.cloudbees.eclipse.core.runcloud"
           typeIds="com.cloudbees.eclipse.core.runcloud">
     </fragment>
+    <fragment
+          class="com.cloudbees.eclipse.run.ui.wizards.RunCloudLocal"
+          id="com.cloudbees.eclipse.core.runcloud.local"
+          typeIds="com.cloudbees.eclipse.core.runcloud.local">
+    </fragment>
  </extension>
  <extension
        point="org.eclipse.wst.server.ui.serverImages">
@@ -143,6 +148,11 @@
           icon="icons/16x16/cb_plain.png"
           id="com.cloudbees.eclipse.run.ui.server.image"
           typeIds="com.cloudbees.eclipse.core.runcloud">
+    </image>
+    <image
+          icon="icons/16x16/cb_plain.png"
+          id="com.cloudbees.eclipse.run.ui.server.image"
+          typeIds="com.cloudbees.eclipse.core.runcloud.local">
     </image>
  </extension>
 
