--- a/com.cloudbees.eclipse.sdk/build.properties
+++ b/com.cloudbees.eclipse.sdk/build.properties
@@ -2,4 +2,6 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               cloudbees-sdk/
+               cloudbees-sdk/,\
+               lib/,\
+               lib/cloudbees-api-client-1.0.0-SNAPSHOT.jar
