--- a/com.cloudbees.eclipse.dev.ui/.project
+++ b/com.cloudbees.eclipse.dev.ui/.project
@@ -25,4 +25,11 @@
 		<nature>org.eclipse.pde.PluginNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>plugin_.xml</name>
+			<type>1</type>
+			<locationURI>PROJECT_LOC/plugin.xml</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
