deploy, stop and start actions working using opensource Bees SDK

--- a/com.cloudbees.eclipse.run.core/plugin.xml
+++ b/com.cloudbees.eclipse.run.core/plugin.xml
@@ -1,92 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-   <extension-point id="com.cloudbees.eclipse.run.core.processLifecycleHook" name="launchHook" schema="schema/com.cloudbees.eclipse.run.core.processLifecycleHook.exsd"/>
-   <extension
-         point="org.eclipse.debug.core.launchConfigurationTypes">
-      <launchConfigurationType
-            delegate="com.cloudbees.eclipse.run.core.launchconfiguration.CBLaunchDelegate"
-            id="com.cloudbees.eclipse.run.core.launchconfiguration.launchConfigurationType"
-            modes="run, debug"
-            name="CloudBees Application">
-      </launchConfigurationType>
-   </extension>
- <extension
-          point="org.eclipse.wst.server.core.runtimeTypes">
-       <runtimeType
-             class="com.cloudbees.eclipse.core.RunCloudRuntimeDeleage"
-             description="Deploy to Run@Cloud"
-             id="com.cloudbees.eclipse.core.runcloud"
-             name="Run@Cloud"
-             vendor="Cloudbees"
-             vendorId="com.cloudbees"
-             version="1">
-          <moduleType
-                types="com.cloudbees.eclipse.core.runcloud"
-                versions="*">
-          </moduleType>
-       </runtimeType>
-       <runtimeType
-             class="com.cloudbees.eclipse.core.RunCloudRuntimeDeleage"
-             description="Launch local instance of application"
-             id="com.cloudbees.eclipse.core.runcloud.local"
-             name="Run@local"
-             vendor="Cloudbees"
-             vendorId="com.cloudbees"
-             version="1">
-          <moduleType
-                types="com.cloudbees.eclipse.core.runcloud.local"
-                versions="*">
-          </moduleType>
-       </runtimeType>
-    </extension>
-    <extension
-          point="org.eclipse.wst.server.core.serverTypes">
-       <serverType
-             behaviourClass="com.cloudbees.eclipse.run.core.wst.RunCloudBehaviourDelegate"
-             class="com.cloudbees.eclipse.run.core.wst.RunCloudServerDelegate"
-             description="Run@Cloud cloud instance"
-             hasConfiguration="false"
-             id="com.cloudbees.eclipse.core.runcloud"
-             initialState="started"
-             launchConfigId="com.cloudbees.eclipse.run.core.launchConfigurationType"
-             launchModes="publish"
-             name="Run@Cloud"
-             runtime="false"
-             runtimeTypeId="com.cloudbees.eclipse.core.runcloud"
-             supportsRemoteHosts="true">
-       </serverType>
-       <serverType
-             behaviourClass="com.cloudbees.eclipse.run.core.wst.RunCloudLocalBehaviourDelegate"
-             class="com.cloudbees.eclipse.run.core.wst.RunCloudServerDelegate"
-             description="Run@Cloud Local instance"
-             hasConfiguration="false"
-             id="com.cloudbees.eclipse.core.runcloud.local"
-             initialState="stopped"
-             launchConfigId="com.cloudbees.eclipse.run.core.launchconfiguration.launchConfigurationType"
-             launchModes="run,stop"
-             name="Run@Cloud Local instance"
-             runtime="false"
-             runtimeTypeId="com.cloudbees.eclipse.core.runcloud.local"
-             supportsRemoteHosts="true">
-       </serverType>
-    </extension>
-    <extension
-          point="org.eclipse.wst.server.core.moduleTypes">
-       <moduleType
-             id="com.cloudbees.eclipse.core.runcloud"
-             name="Run@Cloud">
-       </moduleType>
-       <moduleType
-             id="com.cloudbees.eclipse.core.runcloud.local"
-             name="Run@Cloud local">
-       </moduleType>
-    </extension>
-    <extension
-          point="com.cloudbees.eclipse.run.core.processLifecycleHook">
-       <hook
-             defaultHandler="com.cloudbees.eclipse.run.core.wst.WSTProjectLifecycleHook"
-             id="com.cloudbees.eclipse.run.core.wstHook">
-       </hook>
-    </extension>
+	<extension-point id="com.cloudbees.eclipse.run.core.processLifecycleHook"
+		name="launchHook" schema="schema/com.cloudbees.eclipse.run.core.processLifecycleHook.exsd" />
+	<extension point="org.eclipse.debug.core.launchConfigurationTypes">
+		<launchConfigurationType
+			delegate="com.cloudbees.eclipse.run.core.launchconfiguration.CBLaunchDelegate"
+			id="com.cloudbees.eclipse.run.core.launchconfiguration.launchConfigurationType"
+			modes="run, debug" name="CloudBees Application">
+		</launchConfigurationType>
+	</extension>
+	<extension point="org.eclipse.wst.server.core.runtimeTypes">
+		<runtimeType
+			description="Deploy to Run@Cloud" id="com.cloudbees.eclipse.core.runcloud"
+			name="Run@Cloud" vendor="Cloudbees" vendorId="com.cloudbees" version="1">
+			<moduleType types="com.cloudbees.eclipse.core.runcloud"
+				versions="*">
+			</moduleType>
+		</runtimeType>
+		<runtimeType
+			description="Launch local instance of application" id="com.cloudbees.eclipse.core.runcloud.local"
+			name="Run@local" vendor="Cloudbees" vendorId="com.cloudbees" version="1">
+			<moduleType types="com.cloudbees.eclipse.core.runcloud.local"
+				versions="*">
+			</moduleType>
+		</runtimeType>
+	</extension>
+	<extension point="org.eclipse.wst.server.core.serverTypes">
+		<serverType
+        behaviourClass="com.cloudbees.eclipse.run.core.wst.RunCloudBehaviourDelegate"
+        class="com.cloudbees.eclipse.run.core.wst.RunCloudServerDelegate"
+        description="Run@Cloud cloud instance"
+        hasConfiguration="false"
+        id="com.cloudbees.eclipse.core.runcloud"
+        launchConfigId="com.cloudbees.eclipse.run.core.launchconfiguration.launchConfigurationType"
+        launchModes="run, stop, publish"
+        name="Run@Cloud"
+        runtime="false"
+        runtimeTypeId="com.cloudbees.eclipse.core.runcloud"
+        supportsRemoteHosts="true">
+		</serverType>
+		<serverType
+			behaviourClass="com.cloudbees.eclipse.run.core.wst.RunCloudLocalBehaviourDelegate"
+			class="com.cloudbees.eclipse.run.core.wst.RunCloudServerDelegate"
+			description="Run@Cloud Local instance" hasConfiguration="false"
+			id="com.cloudbees.eclipse.core.runcloud.local" initialState="stopped"
+			launchConfigId="com.cloudbees.eclipse.run.core.launchconfiguration.launchConfigurationType"
+			launchModes="run,stop" name="Run@Cloud Local instance" runtime="false"
+			runtimeTypeId="com.cloudbees.eclipse.core.runcloud.local"
+			supportsRemoteHosts="true">
+		</serverType>
+	</extension>
+	<extension point="org.eclipse.wst.server.core.moduleTypes">
+		<moduleType id="com.cloudbees.eclipse.core.runcloud" name="Run@Cloud">
+		</moduleType>
+		<moduleType id="com.cloudbees.eclipse.core.runcloud.local"
+			name="Run@Cloud local">
+		</moduleType>
+	</extension>
+	<extension point="com.cloudbees.eclipse.run.core.processLifecycleHook">
+		<hook defaultHandler="com.cloudbees.eclipse.run.core.wst.WSTProjectLifecycleHook"
+			id="com.cloudbees.eclipse.run.core.wstHook">
+		</hook>
+	</extension>
 </plugin>
